# rpg

./: .gitmodules  CMakeLists.txt
assets/maps/: test
include/: entity.h  main.h  map.h  sprite.h  window.h
src/: entity.c  main.c  map.c  sprite.c  window.c
src/sprites/: grass.c  rock.c
